--- a/machine.html
+++ b/machine.html
@@ -237,7 +237,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698290308-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698290308-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -293,7 +293,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
@@ -393,7 +393,7 @@ Product?...</p>
 <p>2 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697926646-machine-learning-deep-learning-engineer-bcai-2020-campus'>Bosch Group Machine Learning/Deep Learning Engineer/????/???????_BCAI_2020 Campus | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697926646-machine-learning-deep-learning-engineer-bcai-2020-campus'>Bosch Group Machine Learning/Deep Learning Engineer/????/???????_BCAI_2020 Campus | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
