--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://fincite.join.com/jobs/474213-product-owner-advisory-suite'>Job @ Fincite (Frankfurt): Product Owner- Advisory... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://fincite.join.com/jobs/475746-product-owner-digital-advisory-f-m-d'>Job @ Fincite (Frankfurt am Main): Product Owner ?... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://sportsrecruitsllc.applytojob.com/apply/mGkxYEAZhL/Associate-Product-Manager-Growth'>Associate Product Manager, Growth - SportsRecruits - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -70,7 +78,7 @@
 <p><span class="badge badge-light">Canada Toronto</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697890847-product-manager-performance-marketing-team'>Allegro Product Manager - Performance Marketing Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Allegro/743999697890847-product-manager-performance-marketing-team'>Allegro Product Manager - Performance Marketing Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -82,7 +90,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/25651-UI-Product-Designer?source=twitter'>
       UI + Product Designer at Output - Los Angeles CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
@@ -102,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
+<h5><a href='http://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -114,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25650-Senior-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25650-Senior-Product-Designer?source=twitter'>
       Senior Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -154,7 +162,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -174,7 +182,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=twitter'>
       Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -218,7 +226,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -302,7 +310,7 @@ machine learning to rapidly and economically equip devices with the intelligence
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -318,7 +326,7 @@ machine learning to rapidly and economically equip devices with the intelligence
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -338,7 +346,7 @@ machine learning to rapidly and economically equip devices with the intelligence
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -416,7 +424,7 @@ machine learning to rapidly and economically equip devices with the intelligence
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
 <p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -457,14 +465,6 @@ machine learning to rapidly and economically equip devices with the intelligence
 <h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698611715-senior-product-designer-square-ecommerce'>Square Senior Product Designer, Square Ecommerce | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
