--- a/full-stack.html
+++ b/full-stack.html
@@ -60,11 +60,11 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://velocity-cs.zohorecruit.com/recruit/ViewJob.na?digest=E1Gb754XvfEhlnVIRRkvG8DyJMHDHkPBk@V0b6tWWcw-&embedsource=CareerSite'>Full Stack Web Developer</a></h5> 
+<h5><a href='https://velocity-cs.zohorecruit.com/recruit/ViewJob.na?digest=E1Gb754XvfEhlnVIRRkvG8DyJMHDHkPBk@V0b6tWWcw-&embedsource=CareerSite'>Full Stack Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698688195-senior-full-stack-web-developer'>Pulse Commerce Senior Full Stack Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698688195-senior-full-stack-web-developer'>Pulse Commerce Senior Full Stack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -140,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698628860-fullstack-developer'>Tradeshift Fullstack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698628860-fullstack-developer'>Tradeshift Fullstack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/imagentechnologies/jobs/4499313002'>Job Application for Staff Software Engineer - Full Stack Web Products at Imagen Technologies</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/imagentechnologies/jobs/4499313002'>Job Application for Staff Software Engineer - Full Stack Web Products at Imagen Technologies</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +290,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
+<h5><a href='http://potentialpark.applytojob.com/apply/oXf6Lm3j7H/FullStack-Web-Developer'>Full-Stack Web Developer - Potentialpark - Career Page</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -330,7 +330,7 @@
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nb9kpMwk'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oWXebfw2&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nb9kpMwk'>DNEG Careers - Full Stack Developer (IMS)</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India  Mumbai</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -342,7 +342,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
+<h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -350,7 +350,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
 <p><span class="badge badge-light">Chennai, India  Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6zf75krt7xgwxfutqniyn16j3r'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/6zf75krt7xgwxfutqniyn16j3r'>Senior Full Stack Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -370,7 +370,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=owDNafwQ&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nOndpMw4'> Plutora Careers - Senior Full Stack .Net Developer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -448,11 +448,11 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
